--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "moment": "^2.29.4",
     "mongoose": "^7.0.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
